- Add Serbian translations (Nikola Jović).
- Fix MT-safety problem in wxZipInputStream (#23054).
- Fix building all samples in release build with CMake (#23106).
- Fix using pkg-config when cross-compiling (#22886, #23037, #23171).
- Fix compilation problem in wxUILocale code when using musl (Khem Raj, #23050).
- Add wxUILocale::GetSystemLocaleId() replacing GetSystemLocale() (#23114).

All (GUI):

- Improve wxWebView::RunScriptAsync() performance (Tobias Taschner, #22781).
- Fix data race when processing events generated in a worker thread.
- Fix compilation problem in wx/propgrid/editors.h (Loïc Bartoletti, #22875).
- Fix wxGeneric{List,Tree}Ctrl high DPI icons (Gerhard Stein, #22887, #22916).
- Add macros for event tables for missing wxWebView events (PB, #22949).
- Improve month selection in wxGenericCalendarCtrl (Lauri Nurmi, #22853).
- Fix maximum length of wxPropertyGrid editors (#23033).
- Add support for Caps/Num/Scroll Lock to wxGetKeyState() (elfmz, #23195).
- Fix wxToolBar::GetToolBitmapSize() in high DPI under non-MSW (#23222).

wxGTK:

- Fix resizing wxGLCanvas with EGL and Wayland (Carl Hetherington, #22811).
- Fix missing X11 libraries when linking with wxGTK2 statically (#22813).
- Fix compilation with GTK 3.22.z and z < 25 (#22816).
- Fix compilation with GTK < 2.21.8 (mkirkham, #22830).
- Fix display artefacts when using AUI without compositor under X11 (#23135).
- Allow selecting and copying text in wxMessageDialog (Ian McInerney, #23039).
- Fix initial size of top-level window on Wayland (#23041).
- Improve size and behaviour of in-place editor in wxTreeCtrl (taler21, #23001).

wxMSW:

- Fix crashes when using wxTextCtrl with MinGW TDM 64 (#22639).
- Avoid appending extraneous NUL bytes to wxTextDataObject text (#22928).
- Improve resizing of some windows on DPI change (#23091).
- Fix wrong size of native MSW icons in wxArtProvider in high DPI (#23127).
- Fix glitch in drawing wxStaticBox with a control as label (#22952).