@@ -252,6 +252,7 @@ All:
 - Fix using pkg-config when cross-compiling (#22886, #23037, #23171).
 - Fix compilation problem in wxUILocale code when using musl (Khem Raj, #23050).
 - Add wxUILocale::GetSystemLocaleId() replacing GetSystemLocale() (#23114).
+- Fail when setting unsupported "mixed" locale under Unix (#23218).
 
 All (GUI):
 
